--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
           <a class="header__nav-item --regular" href="https://www.scantrust.com/blog/">
         <span class="header__nav-item-text">Blog</span>
       </a>
+          <a class="header__nav-item --regular" href="https://www.scantrust.com/terms/">
+        <span class="header__nav-item-text">Terms</span>
+      </a>
           <a class="header__nav-item --regular" href="https://www.scantrust.com/about/">
         <span class="header__nav-item-text">About</span>
       </a>
